--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,16 @@
 name: wx_utils
-description: A new Flutter package project.
+description: Provide common functionalities that can be reused across different parts of the Widgetarian codebase.
 version: 0.0.1
-homepage:
+homepage: https://github.com/davigmacode/flutter_wx_utils
+
+topics:
+  - utils
+  - helper
+  - widgetarian
+
+funding:
+ - https://buymeacoffee.com/davigmacode
+ - https://ko-fi.com/davigmacode
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -10,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  lerp: ^0.0.1
 
 dev_dependencies:
   flutter_test:
